fix a tiny layout issue

--- a/inputs.css
+++ b/inputs.css
@@ -61,7 +61,6 @@ input[type=text]:focus, input[type=number]:focus, select:focus, textarea:focus {
 }
 
 input[type=text]:focus-visible, input[type=number]:focus-visible, select:focus-visible, textarea:focus-visible {
-    border: none;
     outline: none;
 }
 
